# swingtrader

./: .env.example  .gitignore  ARCHITECTURE_EVOLUTION_TRIGGERS.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  V2_IMPLEMENTATION_SPEC.md  claudehandoff-cost-observability.md  claudehandoff-robinhood.md  claudehandoff.md  main.py  pyproject.toml  railway.toml  requirements.txt  run.sh  swing-trader-prd.md  todoscratchpad.md
agents/: base_agent.py  catalyst_agent.py  deep_research_agent.py  discovery_agent.py  fundamental_agent.py  macro_agent.py  pattern_agent.py  reddit_agent.py  web_research_agent.py
bot/: auth.py  daily_digest.py  formatters.py  keyboards.py  message_queue.py  notifications.py  telegram_bot.py  weekly_report.py
config/: onboarding.py  peers.py  settings.py  tickers.py
data/: analog_ranker.py  base_adapter.py  event_discovery.py  event_extractor.py  event_outcomes.py  fundamental_data.py  macro_data.py  market_data.py  news_data.py  pattern_data.py  peer_resolver.py  reddit_data.py  sec_data.py  upcoming_catalysts.py
database/: db.py  models.py  token_store.py
docs/: BRY-187-mobile-memo-readability-qa.md  BRY-187-pr-body-draft.md  ROBINHOOD_INTEGRATION_PLAN.md  ROBINHOOD_TOKEN_STORE.md  mobile-memo-readability-qa.md
evals/: README.md  _bootstrap.py  build_dataset.py  langfuse_api.py  pnl_monitor.py  run_evals.py  shadow_log.py  tasks.py  test_swingtrader_evals.py
execution/: alpaca_client.py  order_manager.py  order_monitor.py  position_manager.py  position_monitor.py  risk_manager.py
memo/: generator.py
(+85 files in other folders)
